# prak-cmc-sem03-c

./: .clang-format  CMakeLists.txt  core.14375  core.27341  core.28210  core.28230  core.28242  core.28368  core.28997  core.29279  fdopen_test.c  in.txt  ira-up04-4_1.c  ira-up04-5_1.c  out.txt  output  strace.txt  strace_no_san.txt  test.c  up04-5.out
ht09/: ht09-3.c  ht09-4.c  ht09-5.c
mz01/: mz01-1.c  mz01-2.c  mz01-3.c  mz01-4.c  mz01-5.c
mz02/: mz02-1.c
mz03/: mz03-1.c  mz03-2.c  mz03-3.c  mz03-4.c  mz03-5.c
mz04/: mz04-1.c  mz04-2.c  mz04-3.c  mz04-4.c  mz04-5.c
mz05/: mz05-1.c  mz05-2.c  mz05-3.c  mz05-4.c  mz05-5.c
mz06/: mz06-1.c  mz06-2.c  mz06-3.c  mz06-4.c  mz06-5.c  mz06-5_rec.c
mz07/: mz07-1.c  mz07-2.c  mz07-3.c  mz07-4.c  mz07-5.c
mz11/: .null-ls_271983_mz11-5.c  mz11-1.c  mz11-2.c  mz11-3.c  mz11-4.c  mz11-5.c
mz12/: mz12-1.c  mz12-2.c  mz12-3.c  mz12-4.c  mz12-5.c
mz13/: mz13-1.c  mz13-2.c  mz13-3.c  mz13-4.c  mz13-5.c
mz14/: mz14-1.c  mz14-2.c  mz14-3.c  mz14-4.c
